# ais-tools

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  test.yml
ais-stream/: .gcloudignore  README.md  bigquery-schema.json  bqstore.py  config-template.sh  config.py  dataflow_decode.py  decode.py  deploy.sh  gcp-auth.py  main.py  nmea.py  query.sql  requirements.txt  run_dataflow.sh  run_query.sh  setup-dataflow.sh  setup.sh  table_spec.json  teardown.sh  test.py  test_ais_stream.py
ais_tools/: __init__.py  ais-tools.h  ais.py  ais18.py  ais19.py  ais24.py  ais25.py  ais5.py  ais8.py  ais9.py  ais_1_2_3.py  ais_commstate.py  aivdm.py  benchmark.py  checksum.c  checksum.h  cli.py  cloud.py  message.py  nmea.py  normalize.py  normalize_transform.py  shiptypes.py  stream.py  strlcpy.c  tagblock.c  tagblock.py  transcode.py
ais_tools/core/: checksum.c  checksum.h  core.h  methods.c  methods.h  module.c  split_tagblock.c  strcpy.c  tagblock.c  tagblock.h  tagblock_decode.c  tagblock_encode.c  tagblock_fields.c  tagblock_join.c  tagblock_split.c  tagblock_update.c
sample/: bad-tagblock-group.nmea  bad-type5.nmea  decode.py  ee-multiline.nmea  errors.nmea  mixed_types.nmea  multi-part.nmea  sample.nmea  single-message-type-5.nmea  spire-test.nmea  type1-bad-bitcount.nmea  type8.nmea
tests/: conftest.py  test_ais.py  test_aivdm.py  test_benchmark.py  test_checksum.py  test_cli.py  test_cloud.py  test_edge_cases.py  test_message.py  test_nmea.py  test_normalize.py  test_tagblock.py  test_transcode.py  test_utils.py
utils/: decode.py  generate_nmea.py  mem-test.py  parse_ais.py  perf-test.py  profile.py  tagblock.py  test_utils.py
utils/udp/: udp_listen.py  udp_send.py
