[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-tools"
description = "Tools for managing AIS messages"
readme = "README.md"
version = "1.0.0dev"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Paul Woods", email = "paul@globalfishingwatch.org"},
]
requires-python = ">=3.10"
dependencies = [
    "libais",
    "Click",
    "gpxpy",
    "requests",
    "bitarray>=3.0.0",
    "cbitstruct",
    "udatetime",
    "xxhash"
]

[project.urls]
Repository = "https://github.com/GlobalFishingWatch/ais-tools.git"

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'ruff',
]

[project.scripts]
ais-tools = "ais_tools.cli:cli"

[tool.setuptools.packages.find]
exclude = ["tests*", "sample*", "src*"]

[tool.ruff]
line-length = 127
exclude = ["utils", "src"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

